BaSP-week2-2022: fixed history, form and footer sections. Removed horizontal scroll

--- a/Semana-04/css/footer.css
+++ b/Semana-04/css/footer.css
@@ -14,19 +14,46 @@ footer {
   padding: 50px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #aace9b;
+}
+.footer-list-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 446px;
 }
 .footer-list h2 {
   margin-right: 20px;
   font-size: 30px;
 }
-.line-bottom {
-  border-bottom: 3px solid #aace9b;
+
+#footer-media {
+  margin-left: 446px;
 }
-#media-icons i {
+#footer-media i {
   font-size: 30px;
   margin: 10px;
 }
 .footer-img {
   width: 60px;
   height: 74px;
+}
+@media (max-width: 1024px) {
+  .footer-list-container {
+    margin: 0;
+    width: 100%;
+  }
+  #footer-media {
+    margin: 0;
+    width: 100%;
+  }
+}
+@media (max-width: 480px) {
+  .footer-list-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer-list-container :nth-child(1) {
+    flex-direction: column-reverse;
+  }
 }
