--- a/Semana-04/css/main.css
+++ b/Semana-04/css/main.css
@@ -13,12 +13,18 @@ h2 {
   line-height: 59px;
 }
 form {
-  display: inline-block;
-  vertical-align: middle;
+  display: flex;
+  justify-content: center;
   margin: 0px 60px 5px 60px;
 }
 span {
   width: 100px;
+}
+.line-bottom {
+  border-bottom: 3px solid #aace9b;
+}
+.top {
+  padding-top: 100px;
 }
 #app-info-section {
   display: flex;
@@ -42,7 +48,7 @@ span {
 }
 
 .funcionalities-each {
-  width: 40%;
+  width: 30%;
   color: #373867;
   font-weight: bold;
   border: 1px solid #373867;
@@ -57,7 +63,6 @@ span {
   flex-wrap: wrap;
   height: 300px;
 }
-
 #info-section {
   display: flex;
   justify-content: center;
@@ -71,19 +76,24 @@ span {
 #info-section div {
   width: 45%;
 }
-
 .form-contact {
-  height: 200px;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
   margin-right: 100px;
 }
 .contact-text-area {
-  display: inline-block;
-  vertical-align: middle;
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
+}
+.contact-text-area-btns {
+  display: flex;
+  justify-content: space-around;
 }
 .history-section {
-  background-color: rgb(151, 65, 83);
-  display: inline;
+  display: flex;
+  flex-direction: column;
 }
 .history-section span {
   width: 50%;
@@ -91,7 +101,6 @@ span {
 }
 .history-section-article {
   width: 100%;
-  background-color: chartreuse;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -99,16 +108,9 @@ span {
 .blur-img {
   height: 300px;
   margin: 10px;
-  /* vertical-align: middle; */
 }
 
 @media (max-width: 1024px) {
-  aside {
-    display: none;
-  }
-  header {
-    display: none;
-  }
   main {
     margin-left: 0px;
   }
@@ -124,6 +126,41 @@ span {
     width: 50%;
   }
   #info-section div {
+    width: 100%;
+  }
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    margin: 0px 60px 5px 60px;
+  }
+  form input[type="text"] {
+    width: 50%;
+  }
+  .contact-text-area-btns {
+    width: 50%;
+  }
+  .form-contact {
+    display: flex;
+    align-items: left;
+  }
+  .blur-img {
+    height: 30%;
+  }
+}
+@media (max-width: 480px) {
+  .history-section article {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .history-section :nth-child(1) {
+    flex-direction: column-reverse;
+  }
+  .history-section span {
+    width: 100%;
+  }
+  .text-area {
     width: 100%;
   }
 }
